Resolve a primeira questão

--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_1/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_1/index.html
@@ -2,11 +2,34 @@
 <html lang="PT-br">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Questão 1</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-
+        <a href="../index.html">&lt;&lt;Voltar</a>
+        <header>
+            <h1>Olá, bem-vindo a questão 1! Estamos no cabeçalho/header</h1>
+            <section>
+                <p>Aqui fica a section do cabeçalho com a navegação logo abaixo.</p>
+                <nav>
+                    <ul>
+                        <li><a href="#main">Link para o main</a></li>
+                        <li><a href="##footer">Link para o footer</a></li>
+                    </ul>
+                </nav>
+            </section>
+        </header>
+        <main id="main">
+            <h2>Aqui fica o conteúdo principal da página, marcado pela tag main</h2>
+            <article>
+                <h3>Podemos ter um article...</h3>
+                <p>...como o conteúdo principal da nossa página</p>
+            </article>
+        </main>
+        <footer id="#footer">
+            <h3>No footer...</h3>
+            <p>...podemos ter links ou outras informações referentes a página ou seus idealizadores</p>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
