--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_2/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_2/index.html
@@ -8,7 +8,7 @@
     <body>
         <a href="../index.html">&lt;&lt;Voltar</a>
         <div>
-            <p title="parágrafo">Parágrafo 1 com background-color usando seletor de atributo</p>
+            <p title="parágrafo1">Parágrafo 1 com background-color usando seletor de atributo</p>
             <p id="p2">Parágrafo 2 com color usando id</p>
             <p class="p3">Parágrafo 3 com border usando class</p>
             <p>Parágrafo 4 com text-align e font-weigth usando pseudo-seletor last-child</p>
