Resolve a quinta questão

--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_5/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_5/index.html
@@ -6,7 +6,40 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-
+        <a href="../index.html">&lt;&lt;Voltar</a>
+        <h2>Preferências musicais </h2>
+        <ol>
+            <li>Pop</li>
+            <li>Rock</li>
+            <li>Eletrônica</li>
+            <li>Lo-fi</li>
+            <li>Synthwave</li>
+            <li>MPB</li>
+        </ol>
+        <h2>Preferências gastronômicas</h2>
+        <ul>
+            <li>Strogonoff</li>
+            <li>Brigadeiro</li>
+            <li>Macarronada</li>
+            <li>Mousse de maracujá</li>
+            <li>Lasanha</li>
+            <li>Torta de morango</li>
+        </ul>
+        <h2>Canais onde consome informação na web</h2>
+        <dl>
+            <dt>Reddit</dt>
+            <dd>Fórum de discussões e notícias sobre uma ampla gama de tópicos.</dd>
+            <dt>Folha de S.Paulo</dt>
+            <dd>Jornal brasileiro com notícias e análises sobre política, economia e cultura.</dd>
+            <dt>BBC News</dt>
+            <dd>Notícias globais e análises detalhadas.</dd>
+            <dt>Estadão</dt>
+            <dd>Jornal que oferece notícias, análises e reportagens sobre o Brasil e o cenário internacional.</dd>
+            <dt>Medium</dt>
+            <dd>Plataforma de publicação com artigos de diversos autores sobre diferentes tópicos.</dd>
+            <dt>G1</dt>
+            <dd>Portal de notícias da Globo com cobertura ampla de eventos nacionais e internacionais.</dd>
+        </dl>
         <script src="script.js"></script>
     </body>
 </html>
