--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_6/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_6/index.html
@@ -2,11 +2,42 @@
 <html lang="PT-br">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Questão 6</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-
+        <a href="../index.html">&lt;&lt;Voltar</a>
+        <div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://www.infnet.edu.br/infnet/home/" target="_blank">
+                            <img src="../assets/imagens/infnet_logo.png" alt="Logo da Infnet">Infnet
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.globo.com/" target="_blank">
+                            <img src="../assets/imagens/globo_logo.png" alt="Logo da globo.com"> Globo.com
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/home" target="_blank">
+                            <img src="../assets/imagens/linkedIn_logo.png" alt="Logo do LinkedIn"> LinkedIn
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/" target="_blank">
+                            <img src="../assets/imagens/youtube_logo.png" alt="Logo do Youtube"> Youtube
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" target="_blank">
+                            <img src="../assets/imagens/instagram_logo.png" alt="Logo do Instagramm"> Instagram
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
