--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_7/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_7/index.html
@@ -2,10 +2,25 @@
 <html lang="PT-br">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Questão 7</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <a href="../index.html">&lt;&lt;Voltar</a>
+        <div>
+            <header>
+                <img src="../assets/imagens/burger_king_logo.png" alt="Logo do Burger King">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Lojas</a></li>
+                        <li><a href="#">Cardápio</a></li>
+                        <li><a href="#">Promoções</a></li>
+                        <li><a href="#">Contatos</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
 
         <script src="script.js"></script>
     </body>
