--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_9/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_9/index.html
@@ -7,7 +7,16 @@
     </head>
     <body>
         <a href="../index.html">&lt;&lt;Voltar</a>
-
+        <div>
+            <main>
+                <h1>Tim Berners-Lee</h1>
+                <img src="../assets/imagens/tim_berners-lee.jpg" alt="">
+                <p>Tim Berners-Lee also known as TimBL, is an English computer scientist, best known as the inventor of
+                    the World Wide Web. He made a proposal for an information management system in March 1989, and he
+                    implemented the first successful communication between a Hypertext Transfer Protocol (HTTP) client
+                    and server via the Internet sometime around mid-November of that same year.</p>
+            </main>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
