--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_10/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_10/index.html
@@ -2,11 +2,42 @@
 <html lang="PT-br">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Questão 10</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+<!--        <a href="../index.html">&lt;&lt;Voltar</a>-->
+        <div id="content-container">
+            <div class="card-container">
+                <img src="../assets/imagens/card_posters/avatar_poster_card.jpg" alt="">
+                <div class="card-info">
+                    <h3>Avatar 2: O Caminho da Água</h3>
+                    <p>Após formar uma família, Jake Sully e Ney'tiri fazem de tudo para ficarem juntos. No entanto, eles
+                        devem sair de casa e explorar as regiões de Pandora quando uma antiga ameaça ressurge, e Jake deve
+                        travar uma guerra difícil contra os humanos.</p>
+                </div>
+            </div>
 
+            <div class="card-container">
+                <img src="../assets/imagens/card_posters/pantera_negra_poster_card.jpg" alt="">
+                <div class="card-info">
+                    <h3>Pantera Negra: Wakanda para Sempre</h3>
+                    <p>Após formar uma família, Jake Sully e Ney'tiri fazem de tudo para ficarem juntos. No entanto, eles
+                        devem sair de casa e explorar as regiões de Pandora quando uma antiga ameaça ressurge, e Jake deve
+                        travar uma guerra difícil contra os humanos.</p>
+                </div>
+            </div>
+
+            <div class="card-container">
+                <img src="../assets/imagens/card_posters/adao_negro_poster_card.jpg" alt="">
+                <div class="card-info">
+                    <h3>Adão Negro</h3>
+                    <p>Quase cinco mil anos após ter ganho poderes incríveis dos deuses egípcios, Adão Negro foi
+                        aprisionado. Agora, libertado de sua tumba, está pronto para desencadear sua forma peculiar de justiça no mundo
+                        moderno.</p>
+                </div>
+            </div>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
