--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_9/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_9/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="PT-br">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Questão 9</title>
@@ -10,7 +10,7 @@
         <div>
             <main>
                 <h1>Tim Berners-Lee</h1>
-                <img src="../assets/imagens/tim_berners-lee.jpg" alt="">
+                <img src="../assets/imagens/tim_berners-lee.jpg" alt="Tim Berners-Lee sits in front of a blackboard covered with various calculations written in chalk">
                 <p>Tim Berners-Lee also known as TimBL, is an English computer scientist, best known as the inventor of
                     the World Wide Web. He made a proposal for an information management system in March 1989, and he
                     implemented the first successful communication between a Hypertext Transfer Protocol (HTTP) client
