--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_10/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_10/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-<!--        <a href="../index.html">&lt;&lt;Voltar</a>-->
+        <a href="../index.html">&lt;&lt;Voltar</a>
         <div id="content-container">
             <div class="card-container">
                 <img src="../assets/imagens/card_posters/avatar_poster_card.jpg" alt="">
