--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_13/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_13/index.html
@@ -2,11 +2,23 @@
 <html lang="PT-br">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Questão 13</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-
+        <h1>Seletores CSS</h1>
+        <p>Seletor de filho direto: Seleciona um elemento que é filho direto, ou seja está diretamente após algum
+        elemento específico na hierarquía do documento. O título (h1) acima é estilizado usando esse seletor.</p>
+        <p class="paragrafo"> Seletor de classe: Seleciona todos os elementos que compartilham o mesmo valor do atributo
+        class. Esse parágrafo tem um background cinza usando esse seletor.</p>
+        <p id="p">Seletor de id: Seleciona um elemento pelo seu identificador exclusivo. Esse parágrafo tem um
+        background coral usando esse seletor.</p>
+        <p title="paragrafo">Seletor de Atributo:  Seleciona todos os elementos que tem um atributo setado para um valor
+        específico. Muito usado em inputs. Esse parágrafo tem o bakcground em vermelho usando esse seletor.</p>
+        <p>Seletor de descendência: Seleciona todos os elementos que são filhos de outro elemento. Todos os parágrafos
+        nessa página, que são filhos de body, tem seu tamanho de fonte alterado usando esse seletor.</p>
+        <p>Seletores de tipo: Seleciona todos os elementos que compartilham a mesma tag. Todos os parágrafos nesta
+        página são estilizados (cor azul escuro e negrito) usando este seletor.</p>
         <script src="script.js"></script>
     </body>
 </html>
