--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_14/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_14/index.html
@@ -2,10 +2,58 @@
 <html lang="PT-br">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Questão 14</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <a id="back-to-main-index" href="../index.html">&lt;&lt;Voltar</a>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#about">Sobre mim</a></li>
+                    <li><a href="#hobbies">Hobbies</a></li>
+                    <li><a href="#contacts">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section id="about">
+                <h2>Sobre mim</h2>
+                <p>Sou um desenvolvedor apaixonado por programação e tecnologia, atualmente explorando programação
+                    funcional e desenvolvimento web em Java. Estou sempre em busca de novos desafios e oportunidades
+                    para crescer como profissional e contribuir com projetos inovadores. Tenho interesse em expandir
+                    meus horizontes, seja em desenvolvimento web ou no mundo da programação, e estou comprometido em
+                    aprender e me adaptar às novas tendências tecnológicas.</p>
+            </section>
+            <br>
+            <section id="hobbies">
+                <h2>Meus Hobbies</h2>
+                <dl>
+                    <dt>Cozinhar</dt>
+                    <dd>Experimentar novas receitas e aperfeiçoar pratos tradicionais.</dd>
+
+                    <dt>Jogos Online</dt>
+                    <dd>Passar o tempo jogando online, com foco em jogos de estratégia e cooperação.</dd>
+
+                    <dt>Ir ao Cinema</dt>
+                    <dd>Acompanhar os lançamentos, especialmente em ficção científica e ação.</dd>
+
+                    <dt>Maratonas Sci-Fi</dt>
+                    <dd>Assistir a séries de ficção científica, explorando diferentes universos e conceitos futuristas.</dd>
+                </dl>
+            </section>
+            <br>
+            <section id="contacts">
+                <h2>Meus contatos</h2>
+                <dl>
+                    <dt>Linkedin</dt>
+                    <dd><a href="https://www.linkedin.com/in/3runomartins/">LinkedIn</a></dd>
+                    <dt>Github</dt>
+                    <dd><a href="https://github.com/3runoAM">Github</a></dd>
+                </dl>
+            </section>
+        </main>
 
         <script src="script.js"></script>
     </body>
