--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_13/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_13/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <a id="back-to-main-index" href="../index.html">&lt;&lt;Voltar</a>
         <h1>Seletores CSS</h1>
         <p>Seletor de filho direto: Seleciona um elemento que é filho direto, ou seja está diretamente após algum
         elemento específico na hierarquía do documento. O título (h1) acima é estilizado usando esse seletor.</p>
