--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_16/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_16/index.html
@@ -2,11 +2,37 @@
 <html lang="PT-br">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Questão 16</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
     <body>
-
+        <a id="back-to-main-index" href="../index.html">&lt;&lt;Voltar</a>
+        <div id="content-container">
+            <img src="../assets/imagens/album_cover.jpg" alt="">
+            <div id="track-info">
+                <p>Born To Die</p>
+                <p id="singer-name">Lana Del Rey</p>
+            </div>
+            <div id="playlist-icon-container">
+                <span class="material-symbols-rounded">menu</span>
+            </div>
+            <p id="track-duration">0:56 / 3:04</p>
+            <div id="track-container">
+                <div id="track"></div>
+                <div id="progress"></div>
+            </div>
+            <div id="controls">
+                <span class="material-symbols-rounded icon">shuffle</span>
+                <span class="material-symbols-outlined icon">skip_previous</span>
+                <span class="material-symbols-outlined pause_circle">pause_circle</span>
+                <span class="material-symbols-outlined icon">stop</span>
+                <span class="material-symbols-outlined icon">skip_next</span>
+                <span class="material-symbols-outlined icon">refresh</span>
+                <span class="material-symbols-outlined icon">volume_up</span>
+            </div>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
