--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_15/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_15/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <a id="back-to-main-index" href="../index.html">&lt;&lt;Voltar</a>
         <main>
             <h1>Links de download e de email</h1>
             <p><a href="../assets/pdf/ressurreicao.pdf" download>Baixar "Ressurreição" de Machado de Assis</a></p>
