Adiciona pasta do TP3 e resolve questões de 1-11

--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_11/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_11/index.html
@@ -15,7 +15,9 @@
                 <img src="../assets/imagens/insta-user-example.png" alt="User picture" id="user-picture">
                 <h1 class="username">3runoam</h1>
             </div>
-            <img src="../assets/imagens/insta-picture.jpg" alt="Post's picture" id="post-picture">
+            <div id="post-picture-container">
+                <img src="../assets/imagens/insta-picture.jpg" alt="Post's picture" id="post-picture">
+            </div>
             <div id="bottom-section">
                 <svg id="like-button"></svg>
                 <p id="likes">36 likes</p>
