--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/3º Teste de Performance/questao_2/index.html
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/3º Teste de Performance/questao_2/index.html
@@ -16,6 +16,8 @@
                     <th>CTR</th>
                     <th>Rank</th>
                 </tr>
+            </thead>
+            <tbody>
                 <tr>
                     <td class="cell-style">silly tshirts</td>
                     <td class="cell-style">6,000</td>
@@ -58,7 +60,7 @@
                     <td class="cell-style">7.1%</td>
                     <td class="cell-style">17.3</td>
                 </tr>
-            </thead>
+            </tbody>
         </table>
     </body>
 </html>
