Finaliza ultimas questões

--- a/Testes de performance por disciplina/Interatividade em Páginas Web (P1)/3º Teste de Performance/questao_12/index.html
+++ b/Testes de performance por disciplina/Interatividade em Páginas Web (P1)/3º Teste de Performance/questao_12/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div id="novo" style="display: flex">
-      <div class="caixinha corVermelha"></div>
-      <div class="caixinha corRoxa"></div>
-      <div class="caixinha corLaranja"></div>
-      <div class="caixinha corVermelha"></div>
+      <div draggable="true" class="caixinha corVermelha" id="caixaVermelha"></div>
+      <div draggable="true" class="caixinha corRoxa" id="caixaRoxa"></div>
+      <div draggable="true" class="caixinha corLaranja" id="caixaLaranja"></div>
+      <div draggable="true" class="caixinha corVerde" id="corVerde"></div>
     </div>
 
     <h3>Container 1</h3>
