--- a/Testes de performance por disciplina/Interatividade em Páginas Web (P1)/3º Teste de Performance/questao_13/index.html
+++ b/Testes de performance por disciplina/Interatividade em Páginas Web (P1)/3º Teste de Performance/questao_13/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="novo" style="display: flex"></div>
 
-    <button>Criar</button>
+    <button id="add-new-draggable">Criar</button>
     <h3>Container 1</h3>
     <div class="container"></div>
     <h3>Container 2</h3>
