--- a/Assesments por disciplina/Interatividade em Páginas Web (P1)/questao_13/index.html
+++ b/Assesments por disciplina/Interatividade em Páginas Web (P1)/questao_13/index.html
@@ -19,7 +19,12 @@
 
             <button type="submit">Enviar pelo WhatsApp</button>
         </form>
-
+        <aside>
+            <p>
+                Para saber mais sobre o formato de número de telefone internacional utilizado pelo whatsapp:
+                <a target="_blank" title="Sobre o formato de número de telefone internacional" href="https://faq.whatsapp.com/1294841057948784/?helpref=uf_share">clique aqui!</a>
+            </p>
+        </aside>
         <script src="script.js"></script>
     </body>
 </html>
