--- a/Assesments por disciplina/Interatividade em Páginas Web (P1)/questao_15/index.html
+++ b/Assesments por disciplina/Interatividade em Páginas Web (P1)/questao_15/index.html
@@ -6,12 +6,12 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div>
+        <form id="deputado-form">
             <label for="nome">Nome: </label>
             <input id="nome" type="text" placeholder="Nome do deputado">
 
             <button>Buscar</button>
-        </div>
+        </form>
 
         <section></section>
         <script src="script.js"></script>
