--- a/Assesments por disciplina/Interatividade em Páginas Web (P1)/questao_5/index.html
+++ b/Assesments por disciplina/Interatividade em Páginas Web (P1)/questao_5/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <img src="https://unsplash.com/pt-br/fotografias/farol-do-carro-AO3VsQ_sGK8"
-             alt="Visão frontal do farol de um carro">
+             alt="Visão frontal de um farol de carro">
         <script src="script.js"></script>
     </body>
 </html>
