--- a/Assesments por disciplina/Interatividade em Páginas Web (P1)/questao_14/index.html
+++ b/Assesments por disciplina/Interatividade em Páginas Web (P1)/questao_14/index.html
@@ -6,9 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <section>
-
-        </section>
+        <section></section>
         <script src="script.js"></script>
     </body>
 </html>
